--- a/_posts/blog/2025-07-24-ttc.md
+++ b/_posts/blog/2025-07-24-ttc.md
@@ -5,17 +5,31 @@ date:   2025-07-24
 categories: machine_learning
 ---
 
-# Test-Time Compute: "Think Step-by-Step"
+# Test-Time Compute
 
-Eight years on, while LLM architectures may seem structurally familiar—from GPT-2 to DeepSeek-V3 and Llama 4—a more subtle, yet profound, revolution is unfolding. It's not just about bigger models or more efficient attention mechanisms. It's about how we use these models: empowering them to "think" at inference time. This shift towards **Test-Time Compute (TTC)** is enabling LLMs to transition from rapid, intuitive "System 1" responses to deliberate, analytical "System 2" reasoning.
+Eight years on, while LLM architectures may seem structurally familiar—from GPT-2 to DeepSeek-V3 and Llama 4—a more subtle, yet profound, revolution is unfolding. A shift towards **Test-Time Compute (TTC)** is enabling LLMs to transition from rapid, intuitive "System 1" responses to deliberate, analytical "System 2" reasoning.
 
-As pre-training scaling laws show diminishing returns, advanced test-time computation is emerging as a critical frontier for driving performance gains. This article explores how Chain-of-Thought (CoT) techniques and their descendants are spearheading this evolution, moving us towards models that don't merely generate, but truly reason.
+As pre-training scaling laws show diminishing returns, advanced test-time computation is emerging as a driver for performance gains.
 
-### 1. Chain-of-Thought (CoT): The Initial Spark
+### 1. "Let's think step by step"
 
-**Chain-of-Thought (CoT)** prompting was the foundational breakthrough for deliberate reasoning. Instead of just yielding a final answer, CoT prompts LLMs to generate intermediate steps, mimicking a step-by-step problem-solving process. This decomposition significantly boosts performance on complex tasks.
+**Chain-of-Thought (CoT)** prompting was the foundational breakthrough for deliberate reasoning. Appending  (Zero-Shot CoT) or providing few-shot examples demonstrate CoT's power. Its effectiveness is pronounced in larger models, though some 2025 research investigates its distillation into smaller, more efficient models.
 
-Simple techniques like appending "Let's think step by step" (Zero-Shot CoT) or providing few-shot examples demonstrate CoT's power. Its effectiveness is particularly pronounced in larger models, though some 2025 research investigates its distillation into smaller, more efficient models. DeepSeek-R1, released in early 2025, exemplifies a model designed to explicitly explore and generate "long CoTs" via reinforcement learning.
+*Figure 1: A comparison between standard few-shot prompting and Chain-of-Thought prompting. By showing its work, the model is guided toward the correct reasoning process.*
+    
+    **Standard Prompt:**
+    > Q: Roger has 5 tennis balls. He buys 2 more cans of tennis balls. Each can has 3 tennis balls. How many tennis balls does he have now?
+    > A: 11
+    >
+    > Q: There are 15 trees in the grove. Grove workers will plant trees in the grove today. After they are done, there will be 21 trees. How many trees did the grove workers plant today?
+    > A: 6
+
+    **Chain-of-Thought Prompt:**
+    > Q: Roger has 5 tennis balls. He buys 2 more cans of tennis balls. Each can has 3 tennis balls. How many tennis balls does he have now?
+    > A: Roger started with 5 balls. 2 cans of 3 tennis balls each is 6 tennis balls. 5 + 6 = 11. The answer is 11.
+    >
+    > Q: There are 15 trees in the grove. Grove workers will plant trees in the grove today. After they are done, there will be 21 trees. How many trees did the grove workers plant today?
+    > A: There are 15 trees to start. There are 21 trees later. The difference is the number of trees planted. 21 - 15 = 6. The answer is 6.
 
 ### 2. Amplifying Reasoning: Self-Consistency and Beyond
 
