Aug 25, 2025 at 15:19 Writing is funstill

--- a/_posts/blog/2025-07-24-ttc.md
+++ b/_posts/blog/2025-07-24-ttc.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "Test Time Compute"
-date:   2025-07-24
+title: "Test Time Compute"
+date: 2025-07-24
 categories: machine_learning
 ---
 
@@ -11,10 +11,10 @@ As pre-training scaling laws show diminishing returns, advanced test-time comput
 
 ### 1. "Let's think step by step"
 
-**Chain-of-Thought (CoT)** prompting was the foundational breakthrough for deliberate reasoning. Appending  (Zero-Shot CoT) or providing few-shot examples demonstrate CoT's power. Its effectiveness is pronounced in larger models, though some 2025 research investigates its distillation into smaller, more efficient models.
+**Chain-of-Thought (CoT)** prompting was the foundational breakthrough for deliberate reasoning. Appending (Zero-Shot CoT) or providing few-shot examples demonstrate CoT's power. Its effectiveness is pronounced in larger models, though some 2025 research investigates its distillation into smaller, more efficient models.
 
-*Figure 1: A comparison between standard few-shot prompting and Chain-of-Thought prompting. By showing its work, the model is guided toward the correct reasoning process.*
-    
+_Figure 1: A comparison between standard few-shot prompting and Chain-of-Thought prompting. By showing its work, the model is guided toward the correct reasoning process._
+
     **Standard Prompt:**
     > Q: Roger has 5 tennis balls. He buys 2 more cans of tennis balls. Each can has 3 tennis balls. How many tennis balls does he have now?
     > A: 11
@@ -63,20 +63,20 @@ Beyond specific models, 2025 research broadly explores "scaling test-time comput
 
 ### Footnotes
 
-1.  Guo, D., Yang, D., Zhang, H., et al. (2025). *DeepSeek-R1: Incentivizing Reasoning Capability in LLMs via Reinforcement Learning*. arXiv preprint arXiv:2501.12948.
-2.  Zhu, K., Li, H., Wu, S., et al. (2025). *Scaling Test-time Compute for LLM Agents*. arXiv preprint arXiv:2506.12928.
-3.  Deng, S., Pan, J., Jiang, K., et al. (2025). *CoAT: Chain-of-Associated-Thoughts Framework for Enhancing Large Language Models Reasoning*. arXiv preprint arXiv:2502.02390.
-4.  Qwen Team. (2025). *Qwen3 Technical Report*. arXiv preprint arXiv:2505.09388.
-5.  Wang, X., Wei, J., Schuurmans, D., Le, Q., Chi, E., & Zhou, D. (2022). *Self-Consistency Improves Chain of Thought Reasoning in Language Models*. arXiv preprint arXiv:2203.11171.
-6.  Ma, A., Song, J., Wang, Y., et al. (2025). *Confidence-Informed Self-Consistency (CISC)*. arXiv preprint arXiv:2502.06233.
-7.  Kang, Z., Li, Y., & Zhao, X. (2025). *Scalable Best-of-N Selection for Large Language Models via Self-Certainty*. arXiv preprint arXiv:2502.18581.
-8.  Yao, S., Yu, D., Zhao, J., Shafran, I., Griffiths, T. L., Cao, Y., & Narasimhan, K. (2023). *Tree of Thoughts: Deliberate Problem Solving with Large Language Models*. arXiv preprint arXiv:2305.10601.
-9.  Besta, M., Blach, N., Kubicek, A., Kyrola, A., Losa, I., Grot, B., & Hofstee, P. (2023). *Graph of Thoughts: Solving Elaborate Problems with Large Language Models*. arXiv preprint arXiv:2308.09687.
-10. Zhang, D., Dong, J., Song, L., et al. (2025). *From System 1 to System 2: A Survey of Reasoning Large Language Models*. arXiv preprint arXiv:2502.17419.
-11. DeepSeek-AI, Guo, D., Yang, D., et al. (2025). *DeepSeek-R1 Thoughtology: Let's about LLM Reasoning*. arXiv preprint arXiv:2504.07128.
-12. MoonshotAI Team, et al. (2025). *Kimi-VL Technical Report*. arXiv preprint arXiv:2504.07491.
-13. Kimi Team, Du, A., Gao, B., et al. (2025). *Kimi k1.5: Scaling Reinforcement Learning with LLMs*. arXiv preprint arXiv:2501.12599.
-14. Meta AI. (2025). *The Llama 4 herd: The beginning of a new era of natively multimodal AI innovation*.
-15. Zhou, C., Li, S., Wang, H., et al. (2025). *Test-Time Reinforcement Learning: Boosting LLMs with Unlabelled Test Data*. Available online via AI Advances: https://aiadvances.org/2025/07/16/test-time-reinforcement-learning/ (Accessed 2025-07-24).
-16. Raschka, S. (2025). *Inference-Time Compute Scaling Methods to Improve Reasoning Models*. Ahead of AI. (Accessed 2025-07-24).
-17. Muennighoff, N., Yang, Z., Shi, W., et al. (2025). *s1: Simple test-time scaling*. (Accessed 2025-07-24).
+1.  Guo, D., Yang, D., Zhang, H., et al. (2025). _DeepSeek-R1: Incentivizing Reasoning Capability in LLMs via Reinforcement Learning_. arXiv preprint arXiv:2501.12948.
+2.  Zhu, K., Li, H., Wu, S., et al. (2025). _Scaling Test-time Compute for LLM Agents_. arXiv preprint arXiv:2506.12928.
+3.  Deng, S., Pan, J., Jiang, K., et al. (2025). _CoAT: Chain-of-Associated-Thoughts Framework for Enhancing Large Language Models Reasoning_. arXiv preprint arXiv:2502.02390.
+4.  Qwen Team. (2025). _Qwen3 Technical Report_. arXiv preprint arXiv:2505.09388.
+5.  Wang, X., Wei, J., Schuurmans, D., Le, Q., Chi, E., & Zhou, D. (2022). _Self-Consistency Improves Chain of Thought Reasoning in Language Models_. arXiv preprint arXiv:2203.11171.
+6.  Ma, A., Song, J., Wang, Y., et al. (2025). _Confidence-Informed Self-Consistency (CISC)_. arXiv preprint arXiv:2502.06233.
+7.  Kang, Z., Li, Y., & Zhao, X. (2025). _Scalable Best-of-N Selection for Large Language Models via Self-Certainty_. arXiv preprint arXiv:2502.18581.
+8.  Yao, S., Yu, D., Zhao, J., Shafran, I., Griffiths, T. L., Cao, Y., & Narasimhan, K. (2023). _Tree of Thoughts: Deliberate Problem Solving with Large Language Models_. arXiv preprint arXiv:2305.10601.
+9.  Besta, M., Blach, N., Kubicek, A., Kyrola, A., Losa, I., Grot, B., & Hofstee, P. (2023). _Graph of Thoughts: Solving Elaborate Problems with Large Language Models_. arXiv preprint arXiv:2308.09687.
+10. Zhang, D., Dong, J., Song, L., et al. (2025). _From System 1 to System 2: A Survey of Reasoning Large Language Models_. arXiv preprint arXiv:2502.17419.
+11. DeepSeek-AI, Guo, D., Yang, D., et al. (2025). _DeepSeek-R1 Thoughtology: Let's about LLM Reasoning_. arXiv preprint arXiv:2504.07128.
+12. MoonshotAI Team, et al. (2025). _Kimi-VL Technical Report_. arXiv preprint arXiv:2504.07491.
+13. Kimi Team, Du, A., Gao, B., et al. (2025). _Kimi k1.5: Scaling Reinforcement Learning with LLMs_. arXiv preprint arXiv:2501.12599.
+14. Meta AI. (2025). _The Llama 4 herd: The beginning of a new era of natively multimodal AI innovation_.
+15. Zhou, C., Li, S., Wang, H., et al. (2025). _Test-Time Reinforcement Learning: Boosting LLMs with Unlabelled Test Data_. Available online via AI Advances: https://aiadvances.org/2025/07/16/test-time-reinforcement-learning/ (Accessed 2025-07-24).
+16. Raschka, S. (2025). _Inference-Time Compute Scaling Methods to Improve Reasoning Models_. Ahead of AI. (Accessed 2025-07-24).
+17. Muennighoff, N., Yang, Z., Shi, W., et al. (2025). _s1: Simple test-time scaling_. (Accessed 2025-07-24).
