well needed revamp to the site

--- a/_posts/blog/2025-10-10-llms.md
+++ b/_posts/blog/2025-10-10-llms.md
@@ -1,7 +1,8 @@
 ---
 layout: default
 title: "LLMS"
-permalink: /llms/
+date: 2025-10-10
+categories: machine_learning
 ---
 
 # Here I track noteworthy LLM responses
