--- a/_posts/blog/2025-07-30-graphs.md
+++ b/_posts/blog/2025-07-30-graphs.md
@@ -1,7 +1,8 @@
 ---
 layout: default
 title: "Graphs"
-permalink: /graphs/
+date: 2025-07-30
+categories: machine_learning
 ---
 
 Graphs about AGI, datacenter scaling, and capital which are provoking:
