updated to ML and life

--- a/_posts/blog/2025-12-15-priority.md
+++ b/_posts/blog/2025-12-15-priority.md
@@ -2,7 +2,7 @@
 layout: post
 title: Priority
 date: 2025-12-15
-categories:
+categories: life
 ---
 
 This post is entitled priority and not priorities because priority doesn't have that much meaning when you consider it in plural form. And this has been one of my issues, i.e. overcommitting myself and doing many things mediocrely instead of having a priority and doing it excellently.
