add two indispensable tools

--- a/_posts/blog/2025-12-04-tools.md
+++ b/_posts/blog/2025-12-04-tools.md
@@ -14,6 +14,8 @@ categories: productivity
 - Codex
 - yt-dlp
 - zsh-syntax-highlighting
+- [fr8](https://pypi.org/project/fr8/)
+- [twtr](https://pypi.org/project/twtr/)
 
 ## Apps
 
