Update blog posts with image path corrections, add new post on consistency, and refine content in tools and colon vs ellipsis discussions.

--- a/_posts/blog/2025-12-04-tools.md
+++ b/_posts/blog/2025-12-04-tools.md
@@ -14,8 +14,10 @@ categories: productivity
 - Codex
 - yt-dlp
 - zsh-syntax-highlighting
-- [fr8](https://pypi.org/project/fr8/)
-- [twtr](https://pypi.org/project/twtr/)
+- uv tool
+    - youtube_transcript_api
+    - [fr8](https://pypi.org/project/fr8/)
+    - [twtr](https://pypi.org/project/twtr/)
 
 ## Apps
 
@@ -32,7 +34,6 @@ categories: productivity
 - Focus for YouTube
 - Accelerate
 - Ghostery
-- Glasp Web Highliter
 - ScreenZen
 
 ## Leisure
