--- a/_posts/blog/2025-07-30-graphs.md
+++ b/_posts/blog/2025-07-30-graphs.md
@@ -7,8 +7,8 @@ categories: machine_learning
 
 Graphs about AGI, datacenter scaling, and capital which are provoking:
 
-![](imgs/graphs/gdp.png)
-![](imgs/graphs/nvidia.jpeg)
-![](imgs/graphs/pie.png)
-![](imgs/graphs/semiconductor.webp)
-![](imgs/graphs/d2r.jpeg)
+![](imgs/2025-07-30-graphs/gdp.png)
+![](imgs/2025-07-30-graphs/nvidia.jpeg)
+![](imgs/2025-07-30-graphs/pie.png)
+![](imgs/2025-07-30-graphs/semiconductor.webp)
+![](imgs/2025-07-30-graphs/d2r.jpeg)
