--- a/_posts/blog/2025-10-10-llms.md
+++ b/_posts/blog/2025-10-10-llms.md
@@ -7,5 +7,5 @@ categories: machine_learning
 
 # Here I track noteworthy LLM responses
 
-- ![](/imgs/llms/aha.png)
-- ![](/imgs/llms/gemini.png)
+- ![](/imgs/2025-10-10-llms/aha.png)
+- ![](/imgs/2025-10-10-llms/gemini.png)
