--- a/_posts/blog/2026-01-19-sf.md
+++ b/_posts/blog/2026-01-19-sf.md
@@ -10,8 +10,10 @@ I have been in SF since January 13th and I would like to make some observations 
 1. The statement that everybody in the tech/startup scene in SF is kind and helps each other is one hundred percent true, here are a few anecdotal examples:
 
     - I'm currently writing this in a co-working space in the Frontier Tower, because my friend Sree who I met on a hike invited me as a guest and funnily enough he is currently talking with somebody that I intro'd him to in the next room.
-    - ![](/imgs/2026-01-19-sf/ft1.heic)
-    - ![](/imgs/2026-01-19-sf/ft2.heic)
+    - <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+        <img src="/imgs/2026-01-19-sf/ft1.heic" width="300"/>
+        <img src="/imgs/2026-01-19-sf/ft2.HEIC" width="300"/>
+      </div>
 
     - On numerous occasions while having lunch or dinner with others, I've been asked about my interests and then subsequently if I'd like an intro to a given person because they might be aligned with what I'm looking for.
 
