--- a/_posts/blog/2026-01-19-sf.md
+++ b/_posts/blog/2026-01-19-sf.md
@@ -5,30 +5,30 @@ date: 2026-01-19
 categories: 
 ---
 
-I have been in SF since January 13th and I would like to make some observations on the city and what I've learned so far.
+I have been in SF since January 13th; here are my observations:
 
-1. The statement that everybody in the tech/startup scene in SF is kind and helps each other is one hundred percent true, here are a few anecdotal examples:
+1. The statement that everybody in the tech/startup scene in SF is kind and helps each other is true, a few anecdotal examples:
 
-    - I'm currently writing this in a co-working space in the Frontier Tower, because my friend Sree who I met on a hike invited me as a guest and funnily enough he is currently talking with somebody that I intro'd him to in the next room.
+    - I'm writing this at the Frontier Tower (co-working space), because my friend Sree who I met on a hike invited me as a guest; he is in turn talking with somebody I intro'd him to in the next room.
       - <div style="display: flex; gap: 10px; flex-wrap: wrap;">
         <img src="/imgs/2026-01-19-sf/ft1.heic" width="300"/>
         <img src="/imgs/2026-01-19-sf/ft2.HEIC" width="300"/>
         </div>
 
-    - On numerous occasions while having lunch or dinner with others, I've been asked about my interests and then subsequently if I'd like an intro to a given person because they might be aligned with what I'm looking for.
+    - On numerous occasions while having lunch or dinner with others, I've been asked about my interests and then subsequently if I'd like an intro to a given person because we might be aligned.
 
     - I got coffee with a few founders at Blue Bottle and they insisted and then paid for my espresso.
 
     - Overall everybody is very inclusive and welcoming, you get what you give.
 
-2. Chutzpah is rewarded here strongly. What I mean is if you're audacious, then instead of being thought of as forward, you'll be rewarded because people will accept to meet you if you cold solicit them with high likelihood.
+2. Chutzpah is rewarded here strongly. What I mean is if you're audacious, then instead of being thought of as forward, you'll be rewarded.
 
-3. It is quite transactional, which is to say that even though I have been intentionally trying in some conversations not to talk about the person's startup instead of themself, it sometimes occurs that somebody starts pitching you even though you don't really want to hear about their startup.
+3. It is quite transactional; even though I have been avoiding talking about the person's startup instead of themself in some conversations, it occurs that somebody starts pitching you unsolicited.
 
-4. The bonafide optimism you experience here. When I was co-working at an office last Saturday, they were earnestly talking about longevity and cryogenics e.g. which cryo lab to use, which was eye-opening because I had only heard of these concepts before in theoretical speak.
+4. The bonafide optimism you experience here. When I was co-working at an office last Saturday, they were earnestly talking about longevity and cryogenics e.g. which cryo lab they will recommend to their relatives. This was eye-opening because I had only interacted with these concepts before "in theory".
 
-5. The network effects here are insane, and I've met manny people so far who I've had mutuals with unbeknownst to me.
+5. The network effects here are insane, and I've met many people so far who I've had mutuals with unbeknownst to me.
 
-6. As I was told by Teddy from Founder's Embassy, discernment is the key in SF; there is a massive offering of events, meetups, etc., but knowing what's worth it and what isn't is key.
+6. As I was told by Teddy from Founders Embassy, discernment is key; there is a massive offering of events, meetups, etc., but discernment is knowing what's worth it and what isn't.
 
 Thanks to Sam who asked me last night at midnight in the Mission Dolores park what I have learnt so far while in SF, spurring me to write this.
