Convert HEIC images to JPEG for browser compatibility

--- a/_posts/blog/2026-01-19-sf.md
+++ b/_posts/blog/2026-01-19-sf.md
@@ -11,8 +11,8 @@ I have been in SF since January 13th; here are my observations:
 
     - I'm writing this at the Frontier Tower (co-working space), because my friend Sree who I met on a hike invited me as a guest; he is in turn talking with somebody I intro'd him to in the next room.
       - <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-        <img src="/imgs/2026-01-19-sf/ft1.heic" width="300"/>
-        <img src="/imgs/2026-01-19-sf/ft2.HEIC" width="300"/>
+        <img src="/imgs/2026-01-19-sf/ft1.jpg" width="300"/>
+        <img src="/imgs/2026-01-19-sf/ft2.jpg" width="300"/>
         </div>
 
     - On numerous occasions while having lunch or dinner with others, I've been asked about my interests and then subsequently if I'd like an intro to a given person because we might be aligned.
