--- a/_posts/blog/2025-12-19-2025-wrapped.md
+++ b/_posts/blog/2025-12-19-2025-wrapped.md
@@ -77,16 +77,16 @@ Here are my raw and somewhat naive goals for 2025 that I wrote in apple notes. F
   > I succeeded in saving them daily but not in practicing them
 - Be more honest with myself and with others
   > hard to quantify, need to re-frame these goals for next year to be quantifiable
-**Summer goals:**
-- get accepted to residency/FR8
-  > yes
-- get accepted to the MATS program
-  > no (thankfully)
-**Ultimate goals:**
-- move to SF with a job in AI at SSI Inc or YC
-  > was not realized
-- appear on the Dwarkesh podcast
-  > these was naive, but I will still remain as unrealistically ambitious
+- **Summer goals:**
+  - get accepted to residency/FR8
+    > yes
+  - get accepted to the MATS program
+    > no (thankfully)
+- **Ultimate goals:**
+  - move to SF with a job in AI at SSI Inc or YC
+    > was not realized
+  - appear on the Dwarkesh podcast
+    > these was naive, but I will still remain as unrealistically ambitious
 
 
 Hits
